# mkdocs-exam

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST  Makefile  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: deploy.yml
example/: mkdocs.yml
example/docs/: advanced.md  disable.md  index.md
mkdocs_exam/: plugin.py
mkdocs_exam/css/: __init__.py  exam.css
mkdocs_exam/js/: __init__.py  exam.js
mkdocs_quiz/: plugin.py
tests/: test_plugin.py
